--- a/blog/myblog/templates/myblog/home.html
+++ b/blog/myblog/templates/myblog/home.html
@@ -21,7 +21,7 @@
         {% endfor %}
 -->
         <div class="row">
-            {% for post in posts %}
+            {% for post in page_obj %}
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
                     <img src="media/{{ post.image }}" alt="" class="card-img-top">
@@ -143,15 +143,27 @@
 {% block pagination %}
     <nav aria-label="Paginate me">
         <ul class="pagination justify-content-center">
+            {% if page_obj.has_previous %}
+                <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Предыдущая</a>
+            {% else %}
             <li class="page-item disabled">
-                <a class="page-link" href="#" tabindex="-1">Предыдущая</a>
+                <a class="page-link disabled" href="#" tabindex="-1">Предыдущая</a>
             </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
-                <a class="page-link" href="#">Следующая</a>
-            </li>
+            {% endif %}
+            {% for i in page_obj.paginator.page_range %}
+                {% if i == page_obj.number %}
+                    <li class="page-item active"><a class="page-link" href="?page={{ i }}">{{ i }}</a> </li>
+                {% else %}
+                    <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                {% endif %}
+            {% endfor %}
+            {% if page_obj.has_next %}
+                <a class="page-link" href="?page={{ page_obj.next_page_number }}">Следующая</a>
+            {% else %}
+                <li class="page-item disabled">
+                    <a class="page-link" href="#" tabindex="-1">Следующая</a>
+                </li>
+            {% endif %}
         </ul>
     </nav>
     <br>
