--- a/blog/myblog/templates/myblog/home.html
+++ b/blog/myblog/templates/myblog/home.html
@@ -26,8 +26,13 @@
                 <div class="card mb-4 shadow-sm">
                     <img src="media/{{ post.image }}" alt="" class="card-img-top">
                     <div class="card-body">
-                        <h4 class="card-title">{{ post.h1 }}</h4>
+                        <h5 class="card-title">{{ post.h1|truncatechars:30 }}</h5>
                         {{ post.description|safe|truncatechars:100 }}
+<!--
+                           {% for tag in post.tag.all %}
+                                <a href="{% url 'tag' tag.slug %}" class="mr-1 badge badge-info">#{{ tag }}</a>
+                            {% endfor %}
+-->
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <a href="{% url 'post_detail' slug=post.url %}" class="btn btn-sm btn-outline-secondary">Подробнее</a>
